kubernetes/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: homelab
spec:
  selector:
    app: jellyfin
  ports:
    - name: jellyfin-http
      port: 8096
      targetPort: jellyfin-http
      protocol: TCP
  type: ClusterIP
